recursion.logo.square.FourSquare.scala.error
Erreur de compilation :
FourSquare:7: error: not enough arguments for method gauche: (x$1: Double)Unit.
Unspecified value parameter x$1.
    gauche()
          ^